force-app/main/default/objects/Partite__c/Partite__c.object-meta.xml
<CustomObject>
    <label>Partita</label>
    <nameField>
        <label>N. Fattura</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partite</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>