force-app/main/default/objects/Partite__c/fields/Ammontare__c.field-meta.xml
<CustomField>
    <fullName>Ammontare__c</fullName>
    <label>Ammontare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>