force-app/main/default/objects/Partite__c/fields/Data_fattura__c.field-meta.xml
<CustomField>
    <fullName>Data_fattura__c</fullName>
    <label>Data fattura</label>
    <type>Date</type>
</CustomField>