force-app/main/default/objects/Partite__c/fields/Data_scadenza__c.field-meta.xml
<CustomField>
    <fullName>Data_scadenza__c</fullName>
    <label>Data scadenza</label>
    <type>Date</type>
</CustomField>