force-app/main/default/objects/Partite__c/fields/Giorni_credito__c.field-meta.xml
<CustomField>
    <fullName>Giorni_credito__c</fullName>
    <label>Giorni credito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>