force-app/main/default/objects/Partite__c/fields/Scaduta_da_giorni__c.field-meta.xml
<CustomField>
    <fullName>Scaduta_da_giorni__c</fullName>
    <formula>Today()-  Data_scadenza__c</formula>
    <label>Scaduta da giorni</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>