force-app/main/default/objects/Partite__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF ( Scaduta_da_giorni__c &gt; 0,  image(&quot;/img/samples/flag_red.gif&quot;,&quot;overdue&quot;), image(&quot;/img/samples/flag_green.gif&quot;,&quot;overdue&quot;))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>